Fix for unaligned edit icons issue #771

--- a/Tinville/static/css/designer_shop/styles.css
+++ b/Tinville/static/css/designer_shop/styles.css
@@ -583,8 +583,6 @@
 }
 
 .itemDelete{
-    /*position:absolute;*/
-    /*bottom: 0;*/
     margin-top: 10px;
 }
 
@@ -595,10 +593,6 @@
 }
 
 .overlayEdit{
-    /*position:absolute;*/
-    /*bottom: 0;*/
-    width: 25px;
-    height: 25px;
     z-index: 10;
     color: #f46430;
     cursor: pointer;
